@@ -1,7 +1,7 @@
-/* mpz_rootrem(root, rem, u, nth) --  Set ROOT to floor(U^(1/nth)) and
+/* mpz_rootrem(root, rem, u, nth) --  Set ROOT to trunc(U^(1/nth)) and
    set REM to the remainder.
 
-Copyright 1999, 2000, 2001, 2002, 2003, 2005 Free Software Foundation, Inc.
+Copyright 1999, 2000, 2001, 2002, 2003, 2005, 2012 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
 
@@ -81,10 +81,10 @@ mpz_rootrem (mpz_ptr root, mpz_ptr rem, mpz_srcptr u, unsigned long int nth)
       SIZ(root) = us >= 0 ? rootn : -rootn;
       if (u == root)
 	MPN_COPY (up, rootp, rootn);
-      else if (u == rem)
-	MPN_COPY (up, remp, remn);
     }
 
-  SIZ(rem) = remn;
+  if (u == rem)
+    MPN_COPY (up, remp, remn);
+  SIZ(rem) = us >= 0 ? remn : -remn;
   TMP_FREE;
 }
